syntax = "proto3";
package seatlect;

option go_package = "github.com/tphume/seatlect-services/internal/genproto/orderpb";

import "common.proto";

service OrderService {
  rpc ListOrder (ListOrderRequest) returns (ListOrderResponse);
}

// For ListOrder endpoint
message ListOrderRequest {
  int32 limit = 1;
  int32 page = 2;
}

message ListOrderResponse {
  repeated Order orders = 1;
}